.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Email_Provider__mdt/VMS_Email_Provider__mdt.object-meta.xml
<CustomObject>
    <description>VMS Provider Details for Email Integration</description>
    <label>VMS Email Provider</label>
    <pluralLabel>VMS Email Providers</pluralLabel>
</CustomObject>