.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Email_Provider__mdt/fields/Email_Parsing_Class__c.field-meta.xml
<CustomField>
    <fullName>Email_Parsing_Class__c</fullName>
    <label>Email Parsing Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>