.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Email_Provider__mdt/fields/VMS_First_Separator__c.field-meta.xml
<CustomField>
    <fullName>VMS_First_Separator__c</fullName>
    <description>First Separator of VMS Email Facility</description>
    <label>VMS First Separator</label>
    <length>2</length>
    <type>Text</type>
</CustomField>