.vscode/allianceuat_compare/force-app/main/default/objects/VMS_Email_Provider__mdt/fields/VMS_Second_Separator__c.field-meta.xml
<CustomField>
    <fullName>VMS_Second_Separator__c</fullName>
    <description>Second Separator of VMS Email Facility</description>
    <label>VMS Second Separator</label>
    <length>2</length>
    <type>Text</type>
</CustomField>